Fix alignment and style of dates in articles pages

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -180,4 +180,6 @@ article.card.post {
 
 .article-date {
   margin-right: 0.5em;
+  font-family: $family-code;
+  font-size: 1rem;
 }
